// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> color should render a heading with custom color 1`] = `
<div>
  <h5
    class="Textweb__Text-dvo2dp-0 fMoQTH Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
    color="primary.900"
    data-testid="ds-text"
  >
    Heading
  </h5>
</div>
`;

exports[`<Heading /> should render a heading with default props 1`] = `
<div>
  <h5
    class="Textweb__Text-dvo2dp-0 yfwTW Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h5>
</div>
`;

exports[`<Heading /> size should render a heading with size large 1`] = `
<div>
  <h4
    class="Textweb__Text-dvo2dp-0 djUVTE Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h4>
</div>
`;

exports[`<Heading /> size should render a heading with size medium 1`] = `
<div>
  <h5
    class="Textweb__Text-dvo2dp-0 yfwTW Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h5>
</div>
`;

exports[`<Heading /> size should render a heading with size xlarge 1`] = `
<div>
  <h3
    class="Textweb__Text-dvo2dp-0 dnjVeY Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h3>
</div>
`;

exports[`<Heading /> size should render a heading with size xxlarge 1`] = `
<div>
  <h2
    class="Textweb__Text-dvo2dp-0 gdeMcO Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h2>
</div>
`;

exports[`<Heading /> size should render a heading with size xxxlarge 1`] = `
<div>
  <h1
    class="Textweb__Text-dvo2dp-0 dqOqjJ Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h1>
</div>
`;

exports[`<Heading /> weight should render a heading with bold weight 1`] = `
<div>
  <h5
    class="Textweb__Text-dvo2dp-0 yfwTW Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h5>
</div>
`;

exports[`<Heading /> weight should render a heading with regular weight 1`] = `
<div>
  <h5
    class="Textweb__Text-dvo2dp-0 gRymcG Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h5>
</div>
`;
